css/main.css
/* ... */
.icon-container {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
}

nav a:hover {
  background-color: rgba(0, 0, 0, 0.2);
  /* Semi-transparent background on hover */
}

nav a:active {
  background-color: rgba(0, 0, 0, 0.6);
  /* Semi-transparent background on hover */
}

nav a i {
  font-size: 3em;
  /* Increased icon size */
  color: var(--links);
  /* Adjust icon color */
}

nav .fa {
  font-size: 2rem;
}

@media screen and (max-width: 500px) {
  nav a {
    width: 60px;
    /* Adjusted width for each link */
    height: 60px;
    /* Adjusted height for each link */
  }

  nav .fa {
    font-size: 1.5rem;
  }
}

@media screen and (max-width: 350px) {
  nav a {
    width: 50px;
    /* Adjusted width for each link */
    height: 50px;
    /* Adjusted height for each link */
  }

  nav .fa {
    font-size: 1rem;
  }
}

/* Wrapper */
.inside-wrapper {
  margin: 0 auto;
  max-width: 760px;
  text-align: center;
}

.inside-wrapper p {
  font-family: "chaloops", sans-serif;
  font-weight: 400;
  font-style: normal;
  color: var(--black);
  /* font-size: 2vw; */
  font-size: 1.7em;
  line-height: 1.5em;
  text-align: center;
  padding: 50px 20px;
}

.inside-wrapper a {
  color: var(--links);
}

.inside-wrapper a:hover {
  filter: brightness(90%);
  transition: 0.4s;
}

.inside-wrapper a:active {
  filter: brightness(100%);
  transition: 0s;
}

#main-cta {
  color: var(--white);
  padding: 16px 26px;
  transition: 0.4s;
  border-radius: 40px;
  font-size: 0.8em;
  background-color: var(--links);
  text-align: center;
  font-weight: 600;
}

#main-cta:hover {
  filter: brightness(30%);
  transition: 0.4s;
}

#main-cta:active {
  filter: brightness(10%);
  transition: 0s;
}

img,
iframe,
picture {
  width: 100%;
}

iframe {
  max-width: 700px;
  height: 20vw;
  margin: auto;
  display: block;
  margin-bottom: 30px;
}

.wrap-iframe {
  padding: 0px 30px;
}

hr {
  border: none;
  height: 1px;
  background-color: var(--gray);
}

@-moz-document url-prefix() {
  hr {
    border: none;
    height: 1px;
    background-color: var(--gray);
  }
}

.row {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 10px 30px;
  text-align: left;
  justify-content: center;
  box-sizing: border-box;
}

.row img {
  width: 100%;
  padding: 0 10px;
  box-sizing: border-box;
  pointer-events: none;
}

.row picture {
  width: 100%;
  padding: 0;
  box-sizing: border-box;
  pointer-events: none;
}

.row .text {
  width: 100%;
  text-align: center;
}

.row h2 {
  font-family: "chaloops", sans-serif;
  font-style: normal;
  font-weight: 600;
  color: var(--black);
  /* font-size: 2vw; */
  font-size: 1.3em;
  line-height: 1.7em;
}

.row p {
  font-family: "chaloops", sans-serif;
  font-weight: 400;
  font-style: normal;
  color: var(--black);
  /* font-size: 2vw; */
  font-size: 1.1em;
  line-height: 1.7em;
  padding-top: 10px;
}

.process {
  background-color: var(--white);
  padding: 50px 0px;
}

.process p {
  margin: 0px 20px;
}

.process p,
.modal-paragraph {
  font-family: "chaloops", sans-serif;
  font-weight: 400;
  font-style: normal;
  color: var(--black);
  font-size: 1.1em;
  line-height: 1.7em;
  padding-top: 10px;
  text-align: center;
}

.modal-paragraph {
  padding: 10px;
  max-width: 600px;
  margin: auto;
  margin-top: 30px;
}

.follow-text {
  margin-top: 30px !important;
}

.process-cta {
  font-family: "chaloops", sans-serif;
  font-weight: 400;
  font-style: normal;
  color: var(--black);
  padding: 16px 26px;
  transition: 0.4s;
  border-radius: 40px;
  font-size: 1em;
  background-color: var(--gray);
  text-align: center;
  display: block;
  max-width: 120px;
  margin: auto;
  margin-top: 10px;
  margin-bottom: 20px;
}

.process-cta:hover {
  background-color: #953200;
  transition: 0.4s;
  color: var(--white);
}

.process-cta:active {
  background-color: #4E1A00;
  transition: 0s;
  color: var(--white);
}

.row a {
  color: #0057AD;
}

.row-cta,
.row a .fa,
.modal-exit,
.modal-exit-bottom {
  font-weight: 600;
}

.row a:hover {
  filter: brightness(30%);
}

.row-cta span {
  padding-right: 0px;
  transition: 0.4s;
}

.row-cta:hover span {
  padding-right: 10px;
  transition: 0.4s;
}

/* Add this to your CSS */
.caricature {
  box-sizing: border-box;
  position: relative;
  width: 100%;
  aspect-ratio: 400 / 500;
  overflow: hidden;
}

.caricature picture {
  display: block;
  width: 100%;
}

.caricature img {
  display: block;
  width: 100%;
  height: auto;
}

.content {
  color: var(--black);
  padding: 40px 0;
  font-family: "chaloops", sans-serif;
}

.flex {
  display: flex;
  align-items: center;
  align-items: center;
  justify-content: center;
  flex-direction: row;
}

.information:nth-child(odd) .flex {
  flex-direction: row;
}

.information:nth-child(even) .flex {
  flex-direction: row-reverse;
}

.content h3 {
  font-weight: 900;
  font-family: 'chaloops-bold', sans-serif;
  font-size: 2em;
  line-height: 2em;
  padding: 10px 20px;
}

.flex h3 {
  text-align: left;
}

.content p {
  font-weight: 400;
  font-size: 1.7em;
  line-height: 1.5em;
  padding: 10px 20px;
  box-sizing: border-box;
}

.shop .content p {
  flex: 1;
}

.flex p {
  text-align: left;
}

.content img {
  padding: 10px;
  box-sizing: border-box;
}

.content picture {
  padding: 0;
  box-sizing: border-box;
}

.content nav {
  justify-content: left;
  padding-left: 20px;
}

.text {
  max-width: 600px;
  width: 100%;
}

#questions .text {
  max-width: 1000px;
  width: 100%;
  text-align: left;
  margin: auto;
}

#questions h3 {
  text-align: center;
}

.question {
  display: flex;
  justify-content: space-between;
  font-weight: 600;
  font-family: 'chaloops-medium', sans-serif;
  cursor: pointer;
}

.answer {
  display: none;
  overflow: hidden;
  transition: height 0.3s ease;
}

.question:hover {
  color: var(--linksHover);
  cursor: pointer;
}
/* ... */

